# zammad-ticket-archiver

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  rc-release.yml  security.yml
config/: config.example.yaml  config.schema.json
config/mappings/: path-map.example.json  user-map.example.json
docs/: 00-overview.md  01-architecture.md  02-zammad-setup.md  03-data-model.md  04-path-policy.md  05-pdf-rendering.md  06-signing-and-timestamp.md  07-storage.md  08-operations.md  09-security.md  BUGS_AND_FIXES.md  NFR-implementation-order.md  PLAN_REPO_CLEANUP_AND_IMPROVEMENTS.md  PRD-NFR-engineering-review.md  PRD.md  api.md  buglog.md  bugs-and-fixes.md  config-reference.md  demo-mock-university.md  deploy.md  faq.md  gap-plan.md  promise-matrix.md  release-checklist.md  release-signoff.md  security-review.md  test-plan.md  triage-summary.md
docs/adr/: 0001-tag-vs-fields.md  0002-storage-approach.md  0003-signature-timestamp.md
docs/assets/demo/: README.md  demo-seed-report.json  screenshot-manifest.json
docs/images/: README.md
examples/: ticket-snapshot.sample.json  webhook-payload.sample.json
examples/demo/: mock_university_dataset.json
infra/systemd/: zammad-archiver.env  zammad-archiver.service
plans/: improvement-plan.md
scripts/ci/: smoke-test.sh
scripts/demo/: capture_screenshots.py  mock_zammad_api.py  seed_demo_data.py
scripts/dev/: gen-dev-certs.sh  run-local.sh
scripts/ops/: mount-cifs.sh  verify-pdf.py  verify-pdf.sh
src/: README.md  main.py
src/zammad_pdf_archiver/: __init__.py  __main__.py  _version.py  asgi.py  cli.py  runtime.py
src/zammad_pdf_archiver/adapters/: http_util.py
src/zammad_pdf_archiver/app/: constants.py  responses.py  server.py
src/zammad_pdf_archiver/config/: env_aliases.py  load.py  redact.py  settings.py  validate.py
src/zammad_pdf_archiver/domain/: audit.py  error_messages.py  errors.py  html_sanitize.py  idempotency.py  path_policy.py  redis_delivery_id.py  snapshot_models.py  state_machine.py  ticket_id.py  ticket_utils.py  time_utils.py
src/zammad_pdf_archiver/observability/: logger.py  metrics.py
templates/default/: styles.css  ticket.html
templates/minimal/: styles.css  ticket.html
test/: conftest.py
test/fixtures/: .keep
test/integration/: .keep  test_admin_api.py  test_audit_sidecar.py  test_body_size_limit.py  test_e2e_smoke.py  test_healthz.py  test_hmac_verify.py  test_ingest.py  test_jobs_history.py  test_metrics.py  test_middleware_order.py  test_pdf_rendering.py  test_process_ticket_signing.py  test_process_ticket_v01.py  test_rate_limit.py  test_server_errors.py  test_storage_atomic.py  test_storage_settings.py  test_workflow_settings.py
test/nfr/: __init__.py  test_nfr10_design.py  test_nfr1_hmac.py  test_nfr2_body_rate_limit.py  test_nfr3_path_policy.py  test_nfr4_redaction.py  test_nfr5_transport.py  test_nfr6_config.py  test_nfr7_deploy.py  test_nfr8_docs.py  test_nfr9_python.py
test/static/: test_mypy_clean.py
test/support/: settings_factory.py
test/unit/: .keep  test_audit.py  test_ci_scripts.py  test_cli.py  test_config.py  test_config_schema_sync.py  test_demo_assets_manifest.py  test_demo_scripts.py  test_dev_scripts.py  test_dotenv_loading.py  test_env_aliases.py  test_env_example_sanity.py  test_history.py  test_hmac_verify_middleware.py  test_html_sanitize.py  test_idempotency.py  test_ingest_background.py  test_layout.py  test_logger_config.py  test_logging_redaction.py  test_path_policy.py  test_process_ticket_cancelled.py  test_process_ticket_cleanup.py  test_process_ticket_concurrency.py  test_process_ticket_inflight_idempotency.py  test_process_ticket_notes.py  test_process_ticket_ticket_id.py  test_redaction.py  test_redis_delivery_id.py  test_redis_queue.py  test_render_pdf_templates_root.py  test_retry_policy.py  test_sign_pdf.py  test_snapshot_builder.py  test_state_machine.py  test_systemd_env_template_sanity.py  test_templates_render.py  test_tsa_integration.py  test_tsa_rfc3161.py  test_zammad_client.py
(+42 files in other folders)
