[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zammad-pdf-archiver"
version = "0.1.0"
description = "FastAPI webhook service to archive Zammad tickets as PDFs (optional PAdES signing + RFC3161 timestamp) to filesystem storage."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Maintainers", email = "maintainers@example.invalid" }]
keywords = ["zammad", "pdf", "pades", "rfc3161", "archiving", "webhook"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Typing :: Typed",
]

# NOTE: Dependencies are placeholders for upcoming work packages.
# No business logic is implemented yet.
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "structlog>=24.0",
  "prometheus-client>=0.20",
  "weasyprint>=61.2,<62",
  "pydyf>=0.10,<0.11",
  "cryptography>=42,<45",
  "pyhanko>=0.26,<0.28",
  "pyhanko-certvalidator>=0.26,<0.28",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML",
]

[project.scripts]
zammad-pdf-archiver = "zammad_pdf_archiver.runtime:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zammad_pdf_archiver = ["py.typed", "templates/**/*.css", "templates/**/*.html", "templates/**/.keep"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["test"]
