[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zammad-pdf-archiver"
version = "0.1.0"
description = "FastAPI webhook service to archive Zammad tickets as PDFs (optional PAdES signing + RFC3161 timestamp) to filesystem storage."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Maintainers", email = "maintainers@example.invalid" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Typing :: Typed",
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "structlog>=24.0",
  "prometheus-client>=0.20",
  "weasyprint>=68.0,<69",
  "pydyf>=0.11,<0.12",
  "cryptography>=46.0.5",
  "pyhanko>=0.26,<0.28",
  "pyhanko-certvalidator>=0.26,<0.28",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML",
  "pre-commit>=3.7",
]
redis = ["redis>=5.0"]

[project.scripts]
zammad-pdf-archiver = "zammad_pdf_archiver.runtime:main"
zammad-archiver-cli = "zammad_pdf_archiver.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zammad_pdf_archiver = ["py.typed", "templates/**/*.css", "templates/**/*.html"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
exclude = [
  "^build/",
  "^dist/",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--ignore=.env.example --ignore=.pytest_cache -p no:cacheprovider"
